--- a/circle.yml
+++ b/circle.yml
@@ -4,8 +4,12 @@ machine:
   environment:
     XCODE_WORKSPACE: "secure-ios-app.xcworkspace"
     XCODE_SCHEME: "secure-ios-app"
-    SIMULATOR: "iPhone 7"
-    OS: "latest"
+    SIMULATOR: "iPhone 8"
+    OS: "11.1"
+
+dependencies:
+  pre:
+    - xcrun instruments -w "iPhone 8 (11.1) [" || true
 
 test:
   override:
