--- a/circle.yml
+++ b/circle.yml
@@ -5,7 +5,7 @@ machine:
     XCODE_WORKSPACE: "secure-ios-app.xcworkspace"
     XCODE_SCHEME: "secure-ios-app"
     SIMULATOR: "iPhone 7"
-    OS: "11.0.1"
+    OS: "11.0"
 
 dependencies:
   pre:
@@ -19,7 +19,7 @@ test:
         CODE_SIGN_IDENTITY=
         PROVISIONING_PROFILE=
         -sdk iphonesimulator
-        -destination "platform=iOS Simulator,name=${SIMULATOR},OS=${OS}"
+        -destination "platform=iOS,name=${SIMULATOR},OS=${OS}"
         -workspace $XCODE_WORKSPACE
         -scheme $XCODE_SCHEME
         clean build test |
