--- a/circle.yml
+++ b/circle.yml
@@ -5,11 +5,7 @@ machine:
     XCODE_WORKSPACE: "secure-ios-app.xcworkspace"
     XCODE_SCHEME: "secure-ios-app"
     SIMULATOR: "iPhone 7"
-    OS: "11.0"
-
-dependencies:
-  pre:
-    - xcrun simctl list
+    OS: "iOS 11.0"
 
 test:
   override:
@@ -19,7 +15,7 @@ test:
         CODE_SIGN_IDENTITY=
         PROVISIONING_PROFILE=
         -sdk iphonesimulator
-        -destination "platform=iOS,name=${SIMULATOR},OS=${OS}"
+        -destination "platform=iOS Simulator,OS=${OS},name=${SIMULATOR}"
         -workspace $XCODE_WORKSPACE
         -scheme $XCODE_SCHEME
         clean build test |
